--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -4574,5 +4574,15 @@
         <target>You have left the coalition.</target>
       </segment>
     </unit>
+    <unit id="T1AF293" name="Koalitionseinladungen">
+      <notes>
+        <note category="german">Koalitionseinladungen</note>
+        <note category="from">twig:///templates/ajax/game/town/dashboard.html.twig</note>
+      </notes>
+      <segment>
+        <source>Koalitionseinladungen</source>
+        <target>my coalition invitations</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
