--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4573,5 +4573,15 @@
         <target>Vous avez quitté la coalition.</target>
       </segment>
     </unit>
+    <unit id="T1AF293" name="Koalitionseinladungen">
+      <notes>
+        <note category="german">Koalitionseinladungen</note>
+        <note category="from">twig:///templates/ajax/game/town/dashboard.html.twig</note>
+      </notes>
+      <segment>
+        <source>Koalitionseinladungen</source>
+        <target>mes invitations</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
