--- a/translations/admin+intl-icu.de.xlf
+++ b/translations/admin+intl-icu.de.xlf
@@ -2887,5 +2887,29 @@
         <target>Mysteriösen Fremden aktivieren</target>
       </segment>
     </unit>
+    <unit id="dLSH2dI" name="Notiz">
+      <segment>
+        <source>Notiz</source>
+        <target>Notiz</target>
+      </segment>
+    </unit>
+    <unit id="NgKjlhH" name="Whitelist von {admin}">
+      <segment>
+        <source>Whitelist von {admin}</source>
+        <target>Whitelist von {admin}</target>
+      </segment>
+    </unit>
+    <unit id="ExwOTyG" name="Whitelist hat keinen Autor">
+      <segment>
+        <source>Whitelist hat keinen Autor</source>
+        <target>Whitelist hat keinen Autor</target>
+      </segment>
+    </unit>
+    <unit id="iOIM36J" name="Whitelist hat keine Notiz">
+      <segment>
+        <source>Whitelist hat keine Notiz</source>
+        <target>Whitelist hat keine Notiz</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
