--- a/translations/soul+intl-icu.de.xlf
+++ b/translations/soul+intl-icu.de.xlf
@@ -2812,5 +2812,11 @@
         <target>Koalitionseinladungen</target>
       </segment>
     </unit>
+    <unit id="b08S1Ac" name="Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden">
+      <segment>
+        <source>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</source>
+        <target>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
