--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -4645,7 +4645,7 @@
       </notes>
       <segment>
         <source>Whitelist hat keine Notiz</source>
-        <target>Whitelist nas no note</target>
+        <target>Whitelist has no note</target>
       </segment>
     </unit>
   </file>
