FR Translation for MP soul option

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4591,7 +4591,7 @@
       </notes>
       <segment>
         <source>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</source>
-        <target>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</target>
+        <target>Activer par défaut la vue de l’éditeur avancé pour les MP</target>
       </segment>
     </unit>
   </file>
