--- a/translations/buildings+intl-icu.fr.xlf
+++ b/translations/buildings+intl-icu.fr.xlf
@@ -2351,7 +2351,7 @@
       </notes>
       <segment>
         <source>Diese Verbesserung ist nicht der ganz große Wurf, aber sie erfüllt ihren Zweck: Sie verhindert, dass du zu schnell stirbst.</source>
-        <target>Ce n'est pas spécialement évolué, mais ça fait son office : vous empêcher de mourrir trop vite.</target>
+        <target>Ce n'est pas spécialement évolué, mais ça fait son office : vous empêcher de mourir trop vite.</target>
       </segment>
     </unit>
     <unit id="wwPL56w" name="Simpel aber stabil: Was will man mehr?">
