--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4568,44 +4568,40 @@
       <notes>
         <note category="german">Notiz</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig;twig:///templates/ajax/admin/users/multi_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Notiz</source>
-        <target>Notiz</target>
+        <target>Nota</target>
       </segment>
     </unit>
     <unit id="NgKjlhH" name="Whitelist von {admin}">
       <notes>
         <note category="german">Whitelist von {admin}</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Whitelist von {admin}</source>
-        <target>Whitelist von {admin}</target>
+        <target>Lista blanca por {admin}</target>
       </segment>
     </unit>
     <unit id="ExwOTyG" name="Whitelist hat keinen Autor">
       <notes>
         <note category="german">Whitelist hat keinen Autor</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Whitelist hat keinen Autor</source>
-        <target>Whitelist hat keinen Autor</target>
+        <target>Lista blanca sin creador</target>
       </segment>
     </unit>
     <unit id="iOIM36J" name="Whitelist hat keine Notiz">
       <notes>
         <note category="german">Whitelist hat keine Notiz</note>
         <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Whitelist hat keine Notiz</source>
-        <target>Whitelist hat keine Notiz</target>
+        <target>Lista blanca sin nota</target>
       </segment>
     </unit>
   </file>
