--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4561,11 +4561,10 @@
       <notes>
         <note category="german">Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</note>
         <note category="from">twig:///templates/ajax/soul/settings.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</source>
-        <target>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</target>
+        <target>Usar la vista avanzada del editor para MDs por defecto</target>
       </segment>
     </unit>
   </file>
