--- a/translations/soul+intl-icu.en.xlf
+++ b/translations/soul+intl-icu.en.xlf
@@ -2651,7 +2651,7 @@
       </notes>
       <segment>
         <source>In Foren posten</source>
-        <target>In Foren posten</target>
+        <target>Post in forums</target>
       </segment>
     </unit>
     <unit id="uNF4FkZ" name="Du verlierst die Schreibrechte im Stadtforum sowie allen Weltforen.">
@@ -2662,7 +2662,7 @@
       </notes>
       <segment>
         <source>Du verlierst die Schreibrechte im Stadtforum sowie allen Weltforen.</source>
-        <target>Du verlierst die Schreibrechte im Stadtforum sowie allen Weltforen.</target>
+        <target>You lose the writing rights in the town forum as well as all world forums.</target>
       </segment>
     </unit>
     <unit id="AHcu..1" name="Kommunikation in der Stadt">
