--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -7914,7 +7914,7 @@
       </notes>
       <segment>
         <source>Durchgang in Kraft</source>
-        <target>Break Trough</target>
+        <target>Break Through</target>
       </segment>
     </unit>
     <unit id="KXx_GUV" name="Den Shamane wählen">
