--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -1120,7 +1120,7 @@
     <unit id="p4fRg2j" name="Sein Zuhause verlassen...">
       <segment>
         <source>Sein Zuhause verlassen...</source>
-        <target>Sein Zuhause verlassen...</target>
+        <target>Dein Zuhause verlassen...</target>
       </segment>
     </unit>
     <unit id="tU0K6oe" name="Zur Partieauswahl zurückkehren">
