--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -26159,5 +26159,16 @@ cette violente opération...]]></target>
         <target>répondre à {coa_invite} en coalition</target>
       </segment>
     </unit>
+    <unit id="HPWqmw7">
+      <notes>
+        <note category="german">&lt;strong&gt;Du brauchst für diese Aktion {ap} Aktionspunkt(e)&lt;/strong&gt;. &lt;hr /&gt;Trink oder iss etwas, oder nimm eine Droge, ansonsten muss du bis &lt;strong&gt;morgen&lt;/strong&gt; warten.</note>
+        <note category="from">twig:///templates/ajax/game/town/construction.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>&lt;strong&gt;Du brauchst für diese Aktion {ap} Aktionspunkt(e)&lt;/strong&gt;. &lt;hr /&gt;Trink oder iss etwas, oder nimm eine Droge, ansonsten muss du bis &lt;strong&gt;morgen&lt;/strong&gt; warten.</source>
+        <target><![CDATA[<strong>Il vous faut {ap} point(s) d'action pour faire ceci</strong>. <hr />Buvez, mangez ou droguez-vous pour en récupérer, ou attendez <strong>demain</strong>.]]></target>
+      </segment>
+    </unit>
   </file>
 </xliff>
